--- a/pages/maqueiro.html
+++ b/pages/maqueiro.html
@@ -30,7 +30,77 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
       <![endif]-->
 
-    </head>
+  <!-- VALIDAR CEP -->
+  <script type="text/javascript" >
+  
+    function limpa_formulário_cep() {
+            //Limpa valores do formulário de cep.
+            document.getElementById('rua').value=("");
+            document.getElementById('bairro').value=("");
+            document.getElementById('cidade').value=("");
+            document.getElementById('uf').value=("");            
+    }
+
+    function meu_callback(conteudo) {
+        if (!("erro" in conteudo)) {
+            //Atualiza os campos com os valores.
+            document.getElementById('rua').value=(conteudo.logradouro);
+            document.getElementById('bairro').value=(conteudo.bairro);
+            document.getElementById('cidade').value=(conteudo.localidade);
+            document.getElementById('uf').value=(conteudo.uf);            
+        } //end if.
+        else {
+            //CEP não Encontrado.
+            limpa_formulário_cep();
+            alert("CEP não encontrado.");
+        }
+    }
+        
+    function pesquisacep(valor) {
+
+        //Nova variável "cep" somente com dígitos.
+        var cep = valor.replace(/\D/g, '');
+
+        //Verifica se campo cep possui valor informado.
+        if (cep != "") {
+
+            //Expressão regular para validar o CEP.
+            var validacep = /^[0-9]{8}$/;
+
+            //Valida o formato do CEP.
+            if(validacep.test(cep)) {
+
+                //Preenche os campos com "..." enquanto consulta webservice.
+                document.getElementById('rua').value="...";
+                document.getElementById('bairro').value="...";
+                document.getElementById('cidade').value="...";
+                document.getElementById('uf').value="...";
+                
+                //Cria um elemento javascript.
+                var script = document.createElement('script');
+
+                //Sincroniza com o callback.
+                script.src = 'https://viacep.com.br/ws/'+ cep + '/json/?callback=meu_callback';
+
+                //Insere script no documento e carrega o conteúdo.
+                document.body.appendChild(script);
+
+            } //end if.
+            else {
+                //cep é inválido.
+                limpa_formulário_cep();
+                alert("Formato de CEP inválido.");
+            }
+        } //end if.
+        else {
+            //cep sem valor, limpa formulário.
+            limpa_formulário_cep();
+        }
+    };
+  </script>  
+
+
+</head>
 
     <body>
 
@@ -125,7 +195,7 @@
               <!-- /.sidebar-collapse -->
             </div>
             <!-- /.navbar-static-side -->
-          </nav>
+        </nav>
 
           <!-- Page Content -->
           <div id="page-wrapper">
@@ -156,17 +226,17 @@
                         <!--aba de cadastro--> 
                         <div class="tab-pane fade in active" id="Cadastrar">
                           <div class="row">                            
-                            <form role="form">
+                            <form role="form" method="get" action="."> 
 
-                              <div class="form-group col-sm-4">
-                                <label>Nome</label>
-                                <input name="nome" type="text" class="form-control" placeholder="Digite seu nome" pattern="[a-zA-Z\s]+$" required autofocus >
-                              </div>
-
-                              <div class="form-group col-sm-4">
+                              <div class="form-group col-sm-2">
                                 <label>CPF</label>
                                 <input name="cpf" type="text" class="form-control" placeholder="Digite o CPF" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}">
-                              </div>
+                              </div>                              
+
+                              <div class="form-group col-sm-6">
+                                <label>Nome</label>
+                                <input name="nome" type="text" class="form-control" placeholder="Digite seu nome" pattern="[a-zA-Z\s]+$" required autofocus >
+                              </div>                              
 
                               <div class="form-group col-sm-4">
                                 <label>E-mail</label>
@@ -175,7 +245,7 @@
 
                               <div class="form-group col-sm-3">
                                 <label>Telefone</label>
-                                <input name="fixo" type="phone" class="form-control" placeholder="Digite seu telefone" id="telefone" maxlength="10" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
+                                <input name="fixo" type="phone" class="form-control" placeholder="Digite seu telefone" id="telefone" maxlength="11" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
                               </div>
 
                               <div class="form-group col-sm-3">
@@ -197,14 +267,14 @@
                                 </select>
                               </div>
 
-                              <div class="form-group col-sm-4">
-                                <label>Cep</label>
-                                <input name="cep" type="number" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" required>
+                              <div class="form-group col-sm-2">
+                                <label>CEP:</label>
+                                <input name="cep" type="text" class="form-control" placeholder="Informe o CEP" id="cep" maxlength="8"  onblur="pesquisacep(this.value);" required>
                               </div>
 
-                              <div class="form-group col-sm-6">
+                              <div class="form-group col-sm-8">
                                 <label>Logradouro</label>
-                                <input name="logradouro" type="text" placeholder="Infome o endereço" class="form-control" required>
+                                <input name="logradouro" id="rua" type="text" placeholder="Infome o endereço" class="form-control" required>
                               </div>
 
                               <div class="form-group col-sm-2">
@@ -212,54 +282,26 @@
                                 <input name="endNumero" type="number" placeholder="Número" class="form-control" required>
                               </div>
 
-                              <div class="form-group col-sm-8">
+                              <div class="form-group col-sm-5">
                                 <label>Complemento</label>
                                 <input name="complemento" type="text" placeholder="Complemento" class="form-control" required>
                               </div>
 
                               <div class="form-group col-sm-4">
                                 <label>Bairro</label>
-                                <input name="bairro" type="text" placeholder="Infome o bairro" class="form-control" required>
+                                <input name="bairro" id="bairro" type="text" placeholder="Infome o bairro" class="form-control" required>
                               </div>
 
-                              <div class="form-group col-sm-6">
+                              <div class="form-group col-sm-2">
                                 <label>Cidade</label>
-                                <input name="cidade" type="text" placeholder="Informe a cidade" class="form-control" required>
+                                <input name="cidade" id="cidade" type="text" placeholder="Informe a cidade" class="form-control" required>
                               </div>
 
-                              <div class="form-group col-sm-6">
-                                <label>Estado</label>
-                                <select name="estado" class="form-control mr-sm-2" required>
-                                  <option>Selecione o estado</option>
-                                  <option value="AC">Acre</option>
-                                  <option value="AL">Alagoas</option>
-                                  <option value="AP">Amapá</option>
-                                  <option value="AM">Amazonas</option>
-                                  <option value="BA">Bahia</option>
-                                  <option value="CE">Ceará</option>
-                                  <option value="DF">Distrito Federal</option>
-                                  <option value="ES">Espirito Santo</option>
-                                  <option value="GO">Goiás</option>
-                                  <option value="MA">Maranhão</option>
-                                  <option value="MS">Mato Grosso do Sul</option>
-                                  <option value="MT">Mato Grosso</option>
-                                  <option value="MG">Minas Gerais</option>
-                                  <option value="PA">Pará</option>
-                                  <option value="PB">Paraíba</option>
-                                  <option value="PR">Paraná</option>
-                                  <option value="PE">Pernambuco</option>
-                                  <option value="PI">Piauí</option>
-                                  <option value="RJ">Rio de Janeiro</option>
-                                  <option value="RN">Rio Grande do Norte</option>
-                                  <option value="RS">Rio Grande do Sul</option>
-                                  <option value="RO">Rondônia</option>
-                                  <option value="RR">Roraima</option>
-                                  <option value="SC">Santa Catarina</option>
-                                  <option value="SP">São Paulo</option>
-                                  <option value="SE">Sergipe</option>
-                                  <option value="TO">Tocantins</option>
-                                </select>
+                              <div class="form-group col-sm-1">
+                                <label>Estado:</label> 
+                                <input name="estado" id="uf" type="text" class="form-control" required>                                 
                               </div>
+
                             </form>
                             <div class="col-md-7">
                               <!--alinhamento dos Botões-->
