--- a/pages/index.html
+++ b/pages/index.html
@@ -40,7 +40,7 @@
     <div id="wrapper">
 
         <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <nav class="navbar navbar-default navbar-static-top"  style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -48,7 +48,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Prometheus</a>
+
+                <a class="navbar-brand" href="index.html"><b>Prometheus</b></a>
             </div>
             <!-- /.navbar-header -->
             <ul class="nav navbar-top-links navbar-right">
@@ -61,7 +62,7 @@
                     <ul class="dropdown-menu dropdown-user">
                         <li>
                             <a href="#"><i class="fa fa-user fa-fw"></i> Alterar Senha</a>
-                        </li
+                        </li>
                         <li>
                             <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
                         </li>
@@ -135,9 +136,9 @@
             <br>
             <div class="row">
                 
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <i class="fa fa-fast-forward fa-fw"></i> Acesso Rápido
+                        <b>ACESSO RÁPIDO</b>
                     </div>
                     <div class="panel-body">
                 
@@ -214,16 +215,12 @@
             <!-- /.row -->
             <div class="row">
 
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Bar Chart Example
+                            <B>FILA DE ATENDIMENTOS</B>
                             <div class="pull-right">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                                        Actions
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu pull-right" role="menu">
+                                        <ul class="dropdown-menu pull-right" role="menu">
                                         <li><a href="#">Action</a>
                                         </li>
                                         <li><a href="#">Another action</a>
